tests/multiubuntu/test-cases/TC_36/TC_36_ingress_egress_toEntities_toServices.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-zgqnvohmgkkfjrb
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-2
      group: group-1
  egress:
  - toServices:
    - k8sService:
        serviceName: external-service
        namespace: multiubuntu
---
